name:                hblog
version:             0.1.0.0
synopsis:            Simple Blog Built with Scotty
description:         Please see README.md
homepage:            http://github.com/xyc0562/hblog#readme
license:             MIT
license-file:        LICENSE
author:              Yecheng Xu
maintainer:          xyc0562@gmail.com
copyright:           2016 Yecheng Xu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Views.Index
                     , Views.Templates.Layout
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , http-types
                     , resourcet
                     , text
                     , bytestring
                     , blaze-html
                     , time
                     , transformers
                     , persistent-template
                     , persistent
                     , persistent-postgresql
                     , string-conversions
  default-language:    Haskell2010

executable hblog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hblog
                     , scotty
                     , wai
                     , warp
                     , wai-middleware-static
                     , wai-extra
                     , monad-logger
                     , transformers
                     , persistent-template
                     , persistent
                     , persistent-postgresql
                     , string-conversions
  default-language:    Haskell2010

test-suite hblog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hblog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xyc0562/hblog
